# sayble

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-website.yml  release.yml
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  live_window.rs  main.rs  polish.rs  store.rs
src-tauri/src/asr/: mod.rs  protocol.rs  sapi.rs  volcengine.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/hotkey/: mod.rs  win_hook.rs
src-tauri/src/input/: clipboard.rs  mod.rs  simulate.rs
src-tauri/src/share/: mod.rs
src-tauri/src/tray/: manager.rs  mod.rs
src-tauri/src/tunnel/: config.rs  manager.rs  mod.rs  process.rs
src-tauri/tests/: integration_test.rs  live_window_test.rs
src/components/: About.tsx  AppIcon.tsx  Dashboard.tsx  FloatingApp.tsx  FloatingWindow.tsx  GeneralSettings.tsx  HistoryPage.tsx  HomePage.tsx  HotkeyRecorder.tsx  LiveCameraOverlayApp.tsx  LiveWindowNavApp.tsx  LiveWindowSettings.tsx  PersonaPage.tsx  RecorderPage.tsx  Settings.tsx  ShellLayout.tsx  TitleBar.tsx  VoiceSettings.tsx
src/components/__tests__/: FloatingWindow.test.tsx  HotkeyRecorder.test.tsx  LiveWindowNavigation.test.tsx
src/components/general/: DataSettings.tsx  GeneralHome.tsx  HotkeySettings.tsx
src/components/polish/: PolishHome.tsx  PolishPromptForm.tsx  PolishPromptManager.tsx  PolishProviderForm.tsx  PolishProviderManager.tsx  PolishSettings.tsx
src/components/ui/: badge.tsx  dialog.tsx  sonner.tsx
src/components/voice/: AsrProviderCard.tsx  AsrProviderConfigForm.tsx
src/features/share/: ContentTransferTab.tsx  LocalShareTab.tsx  MobileUploadTab.tsx  SharePage.tsx  ShareServicePanel.tsx  shareUtils.ts
src/features/tunnels/: TunnelNotificationApp.tsx  TunnelPage.tsx
src/lib/: keyEventBridge.ts
src/lib/__tests__/: utils.test.ts
src/stores/: useSettingsStore.ts
src/types/: asr.ts  history.ts  liveWindow.ts  polish.ts  settings.ts  share.ts  tunnel.ts
src/types/__tests__/: liveWindow.test.ts
ui/editorial_design/: index.html  styles.css
ui/ethereal_design/: index.html  styles.css
ui/zeekr_design/: index.html  styles.css
website/: index.html
website/zh/: index.html
