[package]
name = "sayble"
version = "0.1.0"
description = "Sayble - 跨平台桌面语音输入工具"
authors = ["you"]
edition = "2021"

[lib]
name = "sayble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
enigo = "0.2"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "6"
tauri-plugin-log = "2"
byteorder = "1"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Registry",
] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
dotenvy = "0.15"
symphonia = { version = "0.5", features = ["mp3"] }

